examples/test/testpolicy3677.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3677
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key48: value42
      key9: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value15
          key2: value28
          key6: value42
      podSelector:
        matchLabels:
          key39: value7
          key12: value40
          key1: value28
